# coda

./: .gitignore  .oxfmt.json  .oxlintrc.json  AGENTS.md  CLAUDE.md  PRD.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts
.coda/: config.yaml
.github/workflows/: validate.yml
apps/app/: index.html  package.json  tsconfig.json  vite.config.ts
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: default.json
apps/app/src-tauri/src/: ask_runtime.rs  ask_runtime_tests.rs  docs_watcher.rs  lib.rs  main.rs  plan_viewer.rs  plan_viewer_tests.rs  project_registration.rs  project_registry.rs  project_registry_tests.rs  project_runtime.rs  project_runtime_tests.rs
apps/cli/: package.json
apps/desktop/: package.json
docs/: PRD.md  compound-engineering.md  harness-engineering.md  requirements.md
docs/design-docs/: ADR-001-orchestration.md  ADR-002-knowledge.md  ADR-003-alerts.md  ADR-004-issue-tracker.md  ADR-005-cli.md  ADR-006-human-in-loop.md  ADR-007-storage.md  agent-workflows.md  architecture-overview.md  ask-sidebar-interaction-contract.md  compound-loop-design.md  core-beliefs.md  design-tensions.md  index.md  ux-specification.md
docs/perspectives/: compound-engineering-perspective.md  harness-engineering-perspective.md  synthesis.md  technical-architecture.md  ux-perspective.md
docs/plans/: .template.md  tech-debt-tracker.md
docs/references/: claude-agent-sdk-reference-2026-02-18.md  codex-app-server-reference-2026-02-19.md  (+4 more)
tools/: ask-roundtrip-smoke.mjs  validate-boundaries.mjs
(+131 files in other folders)
